fixed issues with popup on smaller screens.

--- a/meet_gavern/css/template.css
+++ b/meet_gavern/css/template.css
@@ -1586,10 +1586,6 @@ aside .dropdown-menu {
   .gk-mainmenu-toggle {
     display: inline-block;
   }
-  #loginModal {
-    max-width: 100%;
-    margin-left: auto;
-  }
   .nav-collapse.gk-main-menu.collapse {
     overflow: hidden;
     height: 0;
