--- a/meet_gavern/less/768px_to_979px.less
+++ b/meet_gavern/less/768px_to_979px.less
@@ -3,10 +3,6 @@
     .gk-mainmenu-toggle {         
         display: inline-block;
     }
-    #loginModal {
-        max-width: 100%;
-        margin-left: auto;
-    }
     .nav-collapse.gk-main-menu.collapse {
         overflow: hidden;
         height: 0;
